2007-10-09  Akim Demaille  <demaille@gostai.com>

	ast/ast.mk.
	* src/ast/Makefile.am: Rename as...
	* src/ast/ast.mk: this.
	Adjust to work as a file included by src/Makefile.am.
	* configure.ac, src/Makefile.am: Adjust.

2007-10-09  Akim Demaille  <demaille@gostai.com>

	Float.set.
	* src/object/float-class.cc (float_class_set): New.
	Remove support for in place arithmetics as primitives.
	* share/urbi/urbi.u (Float.+=, Float.-=, Float.*=)
	(Float./=): New.

2007-10-09  Akim Demaille  <demaille@gostai.com>

	!.
	* src/object/object.hxx: Add missing !.

2007-10-09  Akim Demaille  <demaille@gostai.com>

	Atom::traits_type.
	* src/object/atom.hh (kind): New.
	(traits_type): Remove.
	Adjust dependencies.
	* src/object/object.hxx: Use libport::has.

2007-10-09  Akim Demaille  <demaille@gostai.com>

	Atom typedef.
	* src/object/atom.hh, src/object/atom.hxx (traits): Rename as...
	(traits_type): this.
	Adjust uses.
	(value_type, value_ref_type, value_set): New.
	Use it.
	* src/object/list-class.cc, src/object/object.hxx,
	* src/object/primitives.hh: Adjust.

2007-10-09  Akim Demaille  <akim.demaille@free.fr>

	for loops.
	* src/parser/bison/ugrammar.y (new_flavor, for_loop): New.
	(for): Use it.
	* tests-local.mk: We pass for-loop from k1.

2007-10-09  Akim Demaille  <akim.demaille@free.fr>

	Don't expect Call& to always have a value.
	We need some Void.
	* src/runner/runner.cc (Call&): Don't assert current_.

2007-10-09  Akim Demaille  <demaille@gostai.com>

	++.
	* src/object/float-class.cc: Support +=, -=, *= and /=.
	* share/urbi/urbi.u (Float.++, Float.--): New.
	* src/parser/bison/ugrammar.y, src/parser/bison/utoken.l
	(+=, -=, *=, /=): They now have a Symbol value.

2007-10-09  Akim Demaille  <akim.demaille@free.fr>

	Use __PRETTY_FUNCTION__.
	* src/userver.cc: here.

2007-10-09  Akim Demaille  <akim.demaille@free.fr>

	|-loops do not exist.
	* src/parser/bison/ugrammar.y (flavor.opt): Remove.
	Use pipe.opt instead.
